# local-studio

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  GLM47_SETUP.md  LOOP_CHANGES.md  MIGRATION.md  PROGRESS.md  QUICK_START.md  README.md  STATUS.md  comparison.md  docker-compose.yml  flaws.md  index.html  package-lock.json  package.json  plan.md  possibility.md  pyproject.toml  release.config.cjs  scope.md  site.js  start.sh
.githooks/: pre-commit  pre-push
.github/: dependabot.yml  labels.yml  pull_request_template.md
.ralph/: guardrails.md  progress.md  state.md
cli/: .gitignore  AGENTS.md  README.md  eslint.config.mjs  knip.ts  package.json  tsconfig.json
config/: litellm.yaml  think_parser.py  tool_call_handler.py
controller/: README.md  app.py  backends.py  config.py  eslint.config.mjs  gpu.py  knip.ts  models.py  package.json  process.py  store.py  tsconfig.json
docs/: GLM-47-OUTPUT-CORRUPTION-ANALYSIS.md  README.md  RECIPE_SYSTEM.md  SECURITY.md  agent-workspace.md  charting-ready-schema.md  codex-goal-subagents-plan.md  desktop-electron.md  engine-refactor-plan.md  environment.md  frontend-perf-size.md  getting-started.md  gmail-oauth-setup.md  (+12 more)
ops/glm52-vision/: Dockerfile  Dockerfile.nvfp4kv  STATUS.md  asset-manifest.json  build.sh  compose.yaml  configuration_glm5v.py  cutover.sh  prepare_checkpoint.py  pyproject.toml  rollback.sh  run_mmmu_pro.py  stage.sh
ops/glm52-vision/src/glm52_vision/: __init__.py  model.py  plugin.py  validation.py
(+1866 files in other folders)
